--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       border-radius: 0;
       border: none;
       background: transparent;
-      display: inline-flex;
+      display:none;
       align-items: center;
       justify-content: center;
       cursor: pointer;
@@ -1025,7 +1025,7 @@
 	  <div class="footer-left">
 		© 2025 All rights reserved. Bawli Toli
 	  </div>
-	  <div class="footer-right" data-version="2.5">Version - 2.5</div>
+	  <div class="footer-right" data-version="2.6">Version - 2.6</div>
 	</footer>
 
   <script>
