--- a/index.html
+++ b/index.html
@@ -1150,10 +1150,10 @@
               <div class="dates">Check in: 29-Dec-25</div>
               <div class="dates">Check out: 31-Dec-25</div>
               <div class="nights">Stay: 2 nights</div>
-              <div class="contact-label">Contact person: Sunil</div>
+              <div class="contact-label">Contact person: Sachin</div>
               <div class="phone-row">
                 <div class="phone-text">+91 9027282035</div>
-                <a href="tel:+919027282035" class="call-icon-btn" aria-label="Call Sunil Ratanda">
+                <a href="tel:+919027282035" class="call-icon-btn" aria-label="Call Sachin">
                   <i class="bx bx-phone-call"></i>
                 </a>
               </div>
@@ -1175,9 +1175,12 @@
               <div class="dates">Check in: 31-Dec-25</div>
               <div class="dates">Check out: 1-Jan-26</div>
               <div class="nights">Stay: 1 night</div>
-              <div class="contact-label">Contact person: To be updated</div>
+            <div class="contact-label">Contact person: Anirudh</div>
               <div class="phone-row">
-                <div class="phone-text">Phone: –</div>
+                <div class="phone-text">+91 9950166685</div>
+                <a href="tel:+919027282035" class="call-icon-btn" aria-label="Call Anirudh">
+                  <i class="bx bx-phone-call"></i>
+                </a>
               </div>
             </div>
           </article>
@@ -1197,10 +1200,10 @@
               <div class="dates">Check in: 1-Jan-26</div>
               <div class="dates">Check out: 2-Jan-26</div>
               <div class="nights">Stay: 1 night</div>
-              <div class="contact-label">Contact person: Sunil</div>
+              <div class="contact-label">Contact person: Sachin</div>
               <div class="phone-row">
                 <div class="phone-text">+91 9027282035</div>
-                <a href="tel:+919027282035" class="call-icon-btn" aria-label="Call Sunil Jodhpur">
+                <a href="tel:+919027282035" class="call-icon-btn" aria-label="Call Sachin">
                   <i class="bx bx-phone-call"></i>
                 </a>
               </div>
@@ -1315,7 +1318,7 @@
     <div class="footer-left">
       © 2025 All rights reserved. Bawli Toli
     </div>
-    <div class="footer-right" data-version="3.0">Version - 3.0</div>
+    <div class="footer-right" data-version="3.2">Version - 3.2</div>
   </footer>
 
   <script>
@@ -1635,3 +1638,4 @@
   </script>
 </body>
 </html>
+
